2007-12-17  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/CalculateEstimatedDates.py: Give good defaults for Filter 
	and Enumerated Lists
	* src/plugins/Calendar.py: Give good defaults for Filter and Enumerated
	lists
	* src/PluginUtils/_MenuOptions.py: added a get_filter() method to return
	filter object; added a param to constructor to set default filter

2007-12-16  Brian Matherly <brian@gramps-project.org>
	* src/plugins/Calendar.py: Properly initialize Filter option.
	* src/PluginUtils/_MenuOptions.py: Properly initialize Filter option.

2007-12-16  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/_PaperMenu.py: get margins in PaperFrame constructor
	* src/ReportBase/_DocReportDialog.py: pass margins to PaperFrame constructor
	* src/ReportBase/_ReportOptions.py: added getters/setters for margins

2007-12-16  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: fixed MenuOption's EnumeratedList to match 
	Brian's changes on 2007-12-15.

2007-12-16  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DbManager.py: typo %{}s -> %()s; fixed rcs -q issue
	* src/Utils.py: typo %{}s -> %()s 

2007-12-16  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/ReadPkg.py: attempt to os.remove(directory) failed
	* src/GrampsDb/_GrampsDbFactories.py: import from gen.db

2007-12-15  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py: Remove unnecessary code.

2007-12-15  Brian Matherly <brian@gramps-project.org>
	* src/plugins/FtmStyleAncestors.py
	* src/plugins/DesGraph.py
	* src/plugins/Ancestors.py
	* src/plugins/IndivSummary.py
	* src/plugins/FtmStyleDescendants.py:
	Delete reports that have been unsupported for > 1 year.

2007-12-15  Brian Matherly <brian@gramps-project.org>
	* src/docgen/PdfDoc.py: Fix application launch.

2007-12-15  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py: Add generic Graphviz options.